# negentropy

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: harness.rs  negentropy.rs
negentropy/: Cargo.toml  README.md
negentropy-ffi/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  uniffi-bindgen.rs  uniffi.toml
negentropy-ffi/bindings-python/: .gitignore  MANIFEST.in  README.md  setup.py
negentropy-ffi/bindings-python/examples/: client.py
negentropy-ffi/bindings-python/src/negentropy/: __init__.py
negentropy-ffi/src/: bytes.rs  error.rs  id.rs  lib.rs  negentropy.udl  storage.rs
negentropy/examples/: harness.rs  negentropy.rs  perf.rs
negentropy/fuzz/harness/: Cargo.toml
negentropy/fuzz/harness/src/: main.rs
negentropy/fuzz/perf/: Cargo.toml
negentropy/fuzz/perf/src/: main.rs
negentropy/src/: bytes.rs  constants.rs  encoding.rs  error.rs  hex.rs  id.rs  lib.rs  sha256.rs  storage.rs  types.rs
src/: hex.rs  lib.rs
