[package]
name = "negentropy"
version = "0.1.0"
edition = "2018"
description = "Rust implementation of the negentropy set-reconcilliation protocol."
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/yukibtc/rust-negentropy"
repository = "https://github.com/yukibtc/rust-negentropy.git"
license = "MIT"

[dependencies]
