[package]
name = "negentropy"
version = "0.2.0"
edition = "2018"
description = "Rust implementation of the negentropy set-reconcilliation protocol."
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/yukibtc/rust-negentropy"
repository = "https://github.com/yukibtc/rust-negentropy.git"
license = "MIT"

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true