[package]
name = "negentropy-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
publish = false

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[lib]
name = "negentropy_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
negentropy  = { path = "../negentropy" }
parking_lot = "0.12"
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "d380d164cfdba9e091c461baa6855f0a2294ac5b", features = ["cli"] }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "d380d164cfdba9e091c461baa6855f0a2294ac5b", features = ["build"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"