[package]
name = "negentropy-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
publish = false

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[lib]
name = "negentropy_ffi"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
negentropy  = { path = "../negentropy" }
uniffi = { version = "=0.28.3", features = ["cli"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
