[package]
name = "negentropy"
version = "0.2.0"
edition = "2018"
description = "Rust implementation of the negentropy set-reconcilliation protocol."
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/yukibtc/rust-negentropy"
repository = "https://github.com/yukibtc/rust-negentropy.git"
license = "MIT"
exclude = ["fuzz"]

[features]
default = ["std"]
std = []

[[example]]
name = "negentropy"
